--- a/manageBackend/pom.xml
+++ b/manageBackend/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.5.6</version>
+            <version>2.1.7.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -39,6 +39,8 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>io.springfox</groupId>
