--- a/manageBackend/src/main/resources/application.yml
+++ b/manageBackend/src/main/resources/application.yml
@@ -4,13 +4,14 @@ server:
 spring:
     devtools:
         restart:
-            enabled: true # ???????
-            additional-paths: src/main/java # ????
-            exclude: WEB-I=NF/** # ???????
+            enabled: true
+            additional-paths: src/main/java
+            exclude: WEB-I=NF/**
     freemarker:
-        cache: false # ??????????????
+        cache: false
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
         username: root
-        password: 123456
+        password: Zy737801@
+
